--- a/BoundProject/EnvironmentForStudent.html
+++ b/BoundProject/EnvironmentForStudent.html
@@ -42,8 +42,8 @@
                 <div class="container-fluid">
                     <h1>מסע בעקבות דפי עד</h1><hr />
                     <p>בהמשך למערך השיעור, סביבה זו תעזור לך לבצע מסע בעקבות דף עד. עלייך לעבוד במקביל להוראות ולבצע עבודת חקר על דף העד הנבחר. </p>
-                    <div><iframe id="PresentationForClass" src="https://talrevivo.github.io/Student.Environment/story.html"></iframe></div>
-                    <button class="btn" onclick="openFullscreen();">לחץ פה להגדלת המצגת</button>
+                    <div><iframe id="PresentationForClass" src="https://talrevivo.github.io/Student--Environment/story.html"></iframe></div>
+                    <button id="btn123" name="btn123" class="btn" >לחץ פה להגדלת המצגת</button>
                 </div>
             </div>
         </div>
