--- a/BoundProject/presentation.html
+++ b/BoundProject/presentation.html
@@ -43,7 +43,7 @@
                 <div class="container-fluid">
                     <h1>מערך שיעור- מסע בעקבות דפי עד</h1><hr />
                     <div><iframe id="PresentationForClass" src="https://talrevivo.github.io/Presentation.ForClass/PresentationForClass/story.html"></iframe></div>
-                    <button class="btn">לחץ פה להגדלת המצגת</button>          
+                    <button class="btn" onclick="openFullscreen();">לחץ פה להגדלת המצגת</button>          
                 </div>
             </div>
         </div>
